--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+data/heart_2022_with_nans.csv filter=lfs diff=lfs merge=lfs -text
