--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 data/heart_2022_with_nans.csv filter=lfs diff=lfs merge=lfs -text
+data/heart_2022_Cleaned.csv filter=lfs diff=lfs merge=lfs -text
